# omboarding

./: README.md
project-root/: .gitignore  README.md
project-root/infra/: docker-compose.yml
project-root/pipelines/etl/: etl_runner.py  extract.py  load.py  mass_runner.py  requirements.txt  transform.py
project-root/services/api-fastapi/: Dockerfile  alembic.ini  requirements.txt
project-root/services/api-fastapi/app/: main.py
project-root/services/api-fastapi/app/core/: config.py  database.py
project-root/services/api-fastapi/app/llm/: llm_manager.py  logic.py  prompt_loader.py  tools.py
project-root/services/api-fastapi/app/models/: candidate.py
project-root/services/api-fastapi/app/routers/: candidates.py  insights.py  search.py  upload.py
project-root/services/api-fastapi/app/schemas/: candidate.py  insights.py  search.py  upload.py
project-root/services/api-fastapi/app/services/: pdf_pipeline.py
project-root/services/api-fastapi/migrations/: env.py
project-root/services/api-fastapi/migrations/versions/: 2d7384990b9b_create_candidates_table.py
project-root/services/api-flask/: app.py  requirements.txt
project-root/services/frontend-react/: package-lock.json
project-root/services/frontend-react/src/: App.jsx
project-root/services/worker-rust/mass_pdf_worker/: Cargo.toml  Dockerfile
project-root/services/worker-rust/mass_pdf_worker/src/: main.rs
project-root/ui/svelte-mf/: Dockerfile  index.html  package-lock.json  package.json
project-root/ui/svelte-mf/src/: App.svelte  main.js
(+12 files in other folders)
